Fixed Nav on Mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,6 +57,7 @@ nav a {
 nav a:hover {
     background-color: #FBAE56;
     color: #2E2E3A;
+    text-decoration: none;
 }
 
 nav a:not(:only-child):after {
@@ -95,6 +96,7 @@ nav a:not(:only-child):after {
 /* Media queries start here */
 @media only screen and (max-width: 800px) {
 
+/* Start Mobile Navigation Styling */
 .nav-mobile{
     display: block;
 }
@@ -106,6 +108,23 @@ nav {
 
 nav ul{
     display: none;
+}
+
+nav li{
+    float: none;
+}
+
+nav a{
+    padding: 15px;
+    line-height: 20px;
+}
+
+nav ul li a{
+    padding-left: 30px;
+}
+
+.nav-dropdown{
+    position: static;
 }
 
 #nav-toggle {
@@ -157,5 +176,10 @@ nav ul{
     transform: rotate(-45deg);
 }
 /* End hamburger menu animation */
+/* End mobile navigation styling */
+
+}
+
+@media only screen and (min-width: 800px) {
 
 }
